<resources>
    <string name="app_name">GreenFlag</string>
    <string name="pass_criteria">Your password should have a minimum of 8 characters and contain at least one number, one uppercase letter and one lower case letter. You can use special characters</string>
    <string name="create_account">Create Account</string>
    <string name="green_info">GreenFlag customers can create an account to access</string>
    <string name="company_logo">Company Logo</string>
    <string name="car_health_updates">Car Health Updates</string>
    <string name="policy_information">Policy Information</string>
    <string name="request_car_online">Request Car Online</string>

    <string name="nationality"> - Select Technology</string>
    <string-array name="nationality_array">
        <item>British</item>
        <item>Dutch</item>
        <item>American</item>
        <item>Brazilian</item>
        <item>Nigerian</item>
        <item>Japanese</item>
        <item>Chinese</item>
        <item>Indian</item>
        <item>Moroccan</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
