<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:padding="40dp"
    tools:context="com.example.theappexperts.greenflag.HomeScreen">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container">
    </FrameLayout>



    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/company_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_green_flag" />



    <Button
        android:id="@+id/btnCont"
        android:layout_width="368dp"
        android:layout_height="48dp"
        android:background="@drawable/gradient_button_background"
        android:padding="10dp"
        android:text="@string/create_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_goneMarginEnd="20dp"
        app:layout_goneMarginLeft="20dp"
        app:layout_goneMarginRight="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />
    <TextView
        android:id="@+id/green_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/green_info"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:drawableStart="@drawable/tick"
        android:drawablePadding="10dp"
        android:text="@string/car_health_updates"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/green_info" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/tick"
        android:drawablePadding="10dp"
        android:text="@string/request_car_online"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/tick"
        android:drawablePadding="10dp"
        android:text="@string/policy_information"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</android.support.constraint.ConstraintLayout>
